# ncrystal

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  FILES  INSTALL  INSTALL.md  LICENSE  NCExtnBC.hh  NOTICE  OrthoBoricAcid_BO3H3_sg2_cod9007675.ncmat  PLAN.txt  README  README.md  TODO.txt  VERSION  a.out  autogen_BH3O3_sg2_cod7134159.ncmat  autogen_BH3O3_sg2_cod9007675.ncmat  autogen_F2Ni_sg136_cod9009077.ncmat  bla.cc  bla.json  bla.py  extn_cfgstr.txt  gift.txt  index.html  issue315.py  ming.txt  msd2lambda.py  openmc.txt  pyproject.toml  quick.py  release_4.0.0_todo.txt  setup.py  simplencrystal.instr  stdout  test.cc  test.json  test.py  test3d.py  (+1 more)
examples/dynapi_project/: CMakeLists.txt  README.md
examples/dynapi_project/src/: ncrystal_load.cc  ncrystal_load.hh
examples/plugin/: CMakeLists.txt  README.md  ncplugin_name.txt  pyproject.toml
examples/plugin/data/: somefile.ncmat
examples/plugin/src/: NCPhysicsModel.cc  NCPhysicsModel.hh  NCPluginBoilerPlate.cc  NCPluginFactory.cc  NCPluginFactory.hh  NCTestPlugin.cc  NCTestPlugin.hh
examples/plugin_dataonly/: README.md  pyproject.toml
examples/virtualapi_project/: CMakeLists.txt  README.md
examples/virtualapi_project/src/: main.cc  ncrystal_load.cc  ncrystal_load.hh
ncrystal_core/: CMakeLists.txt  README.md  pyproject.toml
ncrystal_core/_ncrystal_core/: _cli.py
ncrystal_core/app_config/: main.c
ncrystal_core/app_test/: main.cc
ncrystal_core/cmake/: NCrystalConfig.cmake.in  _ncmat2cpp_impl.py  template_ncconfig.h  template_pymod.py.in  template_setup.py.in  template_setup.sh.in  template_unsetup.sh.in
ncrystal_core/cmake/modules/: mctools_utils.cmake  ncrystal_coresrc.cmake  ncrystal_coretests.cmake  ncrystal_legacyoptions.cmake  ncrystal_ncapi.cmake  ncrystal_nccfgapp.cmake  ncrystal_options.cmake  ncrystal_utils.cmake
ncrystal_core/data/: AgBr_sg225_SilverBromide.ncmat  Al2O3_sg167_Corundum.ncmat  Ba_sg229.ncmat  Be_sg194.ncmat  C_sg194_pyrolytic_graphite.ncmat  CaCO3_sg62_Aragonite.ncmat  Cu_sg225.ncmat  Ge_sg227.ncmat  Ho2O3_sg206_HolmiumOxide.ncmat  Kr_Gas_STP.ncmat  Li3N_sg191_LithiumNitride.ncmat  LiH_sg225_LithiumHydride.ncmat  LiquidHeavyWaterD2O_T293.6K.ncmat  LiquidWaterH2O_T293.6K.ncmat  MgCO3_sg167_MagnesiumCarbonate.ncmat  Mg_sg194.ncmat  Nylon12_C12H23NO.ncmat  PbO-beta_sg57_Massicot.ncmat  Pd_sg225.ncmat  Polyethylene_CH2.ncmat  Polystyrene_C8H8.ncmat  Rb_sg229.ncmat  Rubber_C5H8.ncmat  Sn_sg141.ncmat  SrF2_sg225_StrontiumFluoride.ncmat  SrH2_sg62_StrontiumHydride.ncmat  Sr_sg225.ncmat  Ti_sg194.ncmat  UO2_sg225_UraniumDioxide.ncmat  Y2O3_sg206_Yttrium_Oxide.ncmat  Y_sg194.ncmat  ZnO_sg186_ZincOxide.ncmat  ZrO2_sg14_Zirconia.ncmat
ncrystal_core/empty_pypkg/: README.md  pyproject.toml
ncrystal_core/include/NCrystal/: NCAbsOOV.hh  NCAbsorption.hh  NCAtomData.hh  NCBkgdExtCurve.hh  NCBkgdPhonDebye.hh  NCCalcBase.hh  NCCompositionUtils.hh  NCDataSources.hh  NCDefs.hh  NCDump.hh  NCException.hh  NCFact.hh  NCFactImpl.hh  NCFactRequests.hh  NCFactRequestsImpl.hh  NCFactThreads.hh  (+52 more)
ncrystal_core/src/: NCAbsOOV.cc  NCAbsorption.cc  NCAtomDB.cc  NCAtomDBExtender.cc  NCAtomData.cc  NCAtomUtils.cc  NCBkgdExtCurve.cc  NCBkgdPhonDebye.cc  NCBkgdPhonDebyeXS.cc  NCBkgdPhonDebyeXS.hh  NCCFileUtils.cc  NCCalcBase.cc  NCCfgManip.cc  NCCfgTypes.cc  NCCfgVars.cc  NCCompositionUtils.cc  NCDataSources.cc  NCDebyeMSD.cc  NCDebyeMSD.hh  NCDefs.cc  NCDump.cc  NCDynInfoUtils.cc  NCDynLoader.cc  NCElIncScatter.cc  NCElIncXS.cc  NCElIncXS.hh  NCEqRefl.cc  NCEqRefl.hh  NCException.cc  NCFact.cc  NCFactImpl.cc  NCFactRequests.cc  NCFactRequestsImpl.cc  NCFactThreads.cc  NCFactTypes.cc  NCFactory.cc  NCFactoryRegistry.cc  NCFactoryUtils.cc  NCFactory_NCMAT.cc  NCFastConvolve.cc  (+140 more)
ncrystal_metapkg/: README.md  pyproject.toml
ncrystal_pypluginmgr/: README.md  pyproject.toml
ncrystal_pypluginmgr/_ncrystal_pypluginmgr/: _argmode.py  cli.py
ncrystal_python/: README.md  __init__.py  _common.py  _miscimpl.py  _ncmatimpl.py  _testimpl.py  api.py  cifutils.py  core.py  datasrc.py  experimental.py  mcstasutils.py  misc.py  ncmat.py  ncrystal_cif2ncmat  ncrystal_endf2ncmat  ncrystal_hfg2ncmat  ncrystal_inspectfile  ncrystal_ncmat2cpp  ncrystal_ncmat2hkl  ncrystal_onlinedb2ncmat  ncrystal_vdos2ncmat  ncrystal_verifyatompos  nctool  obsolete.py  plot.py  plugins.py  pyproject.toml  vdos.py
ncrystal_python/NCrystal/: __init__.py  __main__.py  _chooks.py  _cli_cif2ncmat.py  _cli_endf2ncmat.py  _cli_hfg2ncmat.py  _cli_ncmat2hkl.py  _cli_nctool.py  _cli_vdos2ncmat.py  _cliimpl.py  _cliwrap_config.py  _common.py  _coreimpl.py  _hfgdata.py  _hklobjects.py  _locatelib.py  _miscimpl.py  _msg.py  _ncmat2cpp_impl.py  _ncmatimpl.py  _testimpl.py  api.py  cifutils.py  cli.py  cliutils.py  core.py  datasrc.py  exceptions.py  hfg2ncmat.py  mcstasutils.py  misc.py  mmc.py  ncmat.py  ncmat2cpp.py  obsolete.py  plot.py  plugins.py  test.py  vdos.py
ncrystal_verify/: CMakeLists.txt  README.md  cli.py  generate.py  pyproject.toml
tests/: CMakeLists.txt  README.md
tests/app_optional/: main.cc
tests/app_smallvect/: main.cc
tests/app_smallvectcopy/: main.cc
tests/cmake/: mctools_testlauncher.py  mctools_testutils.cmake
tests/data/: Al2O3_Alvdos_from_Al225.ncmat  Al_multirole.ncmat  Al_sg225_with_voids.ncmat  QE_pw_Al.out  Wyckoff1963_Sulphor_0011255.cif  dummy_D.cif  fake_cod_1000257.cif  fake_cod_9005777.cif  fake_mp_55.cif  mmcfmwkA.json  mmcfmwkB.json  mp_55_unrefined_conventional.cif  mp_55_unrefined_primitive.cif
tests/scripts/: analysevdos.py  atomdbpy.py  azimuth.py  basic.py  browsefiles.py  cfgstr.py  cfileutils.py  chisq.py  cif2ncmat.py  common.py  compos2.py  composer.py  composer2.py  constants.py  density.py  detect.py  deuterium.py  extinc.py  extn_sabine.py  extncfg.py  fileutils.py  flatcompos.py  fpe.py  hfgpy.py  histfill.py  hists.py  hklobj.py  inmemfilespy.py  long_n2endf_al.py  long_n2endf_ch2.py  long_n2endf_cli.py  long_n2endf_dup.py  long_n2endf_pbo.py  long_n2endf_si.py  mcstasunion.py  mcstasunion2.py  mmc_agbr.py  mmc_al.py  mmc_alnoabs.py  mmc_circ.py  (+62 more)
tests/standalone/: README.md
(+1174 files in other folders)
